--- a/home.html
+++ b/home.html
@@ -10,8 +10,8 @@
 
 <body>
     <ul>
-        <li>第一週 todolist<a href="">成果</a><a href="">設計稿</a></li>
-        <li>第二週 fliter<a href="https://opcmaruko.github.io/filter/index.html">成果</a><a href="">設計稿</a></li>
+        <li>第一週 todolist<a href="https://opcmaruko.github.io/todolist/index.html">成果</a><a href="https://opcmaruko.github.io/todolist/UI/index.html">設計稿</a></li>
+        <li>第二週 fliter<a href="https://opcmaruko.github.io/filter/index.html">成果</a><a href="https://opcmaruko.github.io/filter/UI/index.html">設計稿</a></li>
         <li>第三週<a href="">成果</a><a href="">設計稿</a></li>
         <li>第四週<a href="">成果</a><a href="">設計稿</a></li>
         <li>第五週<a href="">成果</a><a href="">設計稿</a></li>
