--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
         <li>第一週 todolist<a href="https://opcmaruko.github.io/todolist/index.html">成果 </a><a href="https://opcmaruko.github.io/todolist/UI/index.html">設計稿</a></li>
         <li>第二週 fliter<a href="https://opcmaruko.github.io/filter/index.html">成果 </a><a href="https://opcmaruko.github.io/filter/UI/index.html">設計稿</a></li>
         <li>第三週 admin-order<a href="https://opcmaruko.github.io/admin-order/index.html">成果 </a><a href="https://opcmaruko.github.io/admin-order/UI/index.html">設計稿</a></li>
-        <li>第四週 Product-Gallery<a href="https://opcmaruko.github.io/Product-Gallery/">成果</a><a href="https://opcmaruko.github.io/Product-Gallery/UI/index.html">設計稿</a></li>
-        <li>第五週<a href="">成果</a><a href="">設計稿</a></li>
+        <li>第四週 Product-Gallery<a href="https://opcmaruko.github.io/Product-Gallery/index.html">成果 </a><a href="https://opcmaruko.github.io/Product-Gallery/UI/index.html">設計稿</a></li>
+        <li>第五週 Comic Viewer<a href="https://opcmaruko.github.io/Comic-Viewer/index.html">成果 </a><a href="https://opcmaruko.github.io/Comic-Viewer/UI/index.html">設計稿</a></li>
     </ul>
 </body>
 
