--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
         <li>第四週 Product-Gallery<a href="https://opcmaruko.github.io/Product-Gallery/index.html">成果 </a><a href="https://opcmaruko.github.io/Product-Gallery/UI/index.html">設計稿</a></li>
         <li>第五週 Comic Viewer<a href="https://opcmaruko.github.io/Comic-Viewer/index.html">成果 </a><a href="https://opcmaruko.github.io/Comic-Viewer/UI/index.html">設計稿</a></li>
         <li>第六週 Validation<a href="https://opcmaruko.github.io/Validation/index.html">成果 </a><a href="https://opcmaruko.github.io/Validation/UI/index.html">設計稿</a></li>
+        <li>第七週 Validation<a href="https://opcmaruko.github.io/Canvas-Game/index.html">成果 </a><a href="https://opcmaruko.github.io/Canvas-Game/UI/index.html">設計稿</a></li>
     </ul>
 </body>
 
