--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
         <li>第六週 Validation<a href="https://opcmaruko.github.io/Validation/index.html">成果 </a><a href="https://opcmaruko.github.io/Validation/UI/index.html">設計稿</a></li>
         <li>第七週 Canvas Game<a href="https://opcmaruko.github.io/Canvas-Game/index.html">成果 </a><a href="https://opcmaruko.github.io/Canvas-Game/UI/index.html">設計稿</a></li>
         <li>第八週 parallax scrolling<a href="https://opcmaruko.github.io/parallax-scrolling/index.html">成果 </a><a href="https://opcmaruko.github.io/parallax-scrolling/UI/index.html">設計稿</a></li>
+        <li>第九週 Skill Tree<a href="https://opcmaruko.github.io/Skill-Tree/index.html">成果 </a></li>
     </ul>
 </body>
 
